# legion_script

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml
.github/workflows/: rust.yml
c_drivers/: engine.h  legion_api.c  legion_api.h  lua_vm.c  meta.h  python_vm.c  vm.c
examples/: hello.rs
examples/lua/: hello.lua
examples/python/: hello.py  hello2.py
src/: c_api.rs  component.rs  components.rs  driver.rs  filter.rs  lib.rs  query.rs  system.rs  utils.rs  world.rs
tests/: driver.rs
tests/scripts/: print.py
