[package]
name = "legion_script"
version = "0.1.0"
authors = ["Rodrigo Oliveira <rodrigo.redcode@gmail.com>"]
edition = "2018"

[build-dependencies]
cbindgen = "0.14.3"
cc = "1.0.59"

[dependencies]
legion = {path = "./legion"}
easy_ffi = "0.1.0"
log = "0.4.11"
simple_logger = "1.9.0"

[[example]]
name = "hello"
path = "examples/hello.rs"

